first part team sports

--- a/project.html
+++ b/project.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chamber of Sports</title>
+    <meta name="description" content= "WDD 231 - Web Frontend Development I. Lucio Boccazzi. Final project home page." />
+    <meta name="author" content="Lucio Boccazzi" />
+
+    <!-- Social media meta tags -->
+    <meta property="og:title" content="Chamber of Sports" />
+    <meta name="twitter:title" content="Chamber of Sports" />
+    <meta property="og:website" content="website"/>
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="og:image" content="images/messi-coup.jpg" />
+    <meta name="twitter:image" content="images/messi-coup.jpg" />
+    <meta property="og:url" content="" />
+    <meta name="twitter:url" content="" />
 
     <link rel="stylesheet" href="styles/project.css"/>
     <link rel="stylesheet" href="styles/home.css"/>
@@ -19,12 +31,6 @@
     <header>
         <h1>Chamber of Sports - Argentina</h1>
 
-        <div class="hamburger" id="hamburger-icon" aria-label="Toggle Navigation Menu">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-        </div>
-
         <nav class="nav-links" id="nav-links" role="navigation">
             <a href="https://lucioboccazzi.github.io/wdd231/project.html" title="Go to Home Page">Home</a>
             <a href="#" title="Learn about Team Sports">Team Sports</a>
@@ -35,8 +41,8 @@
 
     <main>
         <div class="hero-container">
-            <!-- Hero Section -->
-            <section class="hero">
+
+            <section class="hero" data-bg="https://www.diariopanorama.com/fotos/cache/notas/2022/12/18/1010x567_messi-copa-mundo-434474-193021.jpg">
                 <div class="hero-content">
                     <h2>Welcome to the Chamber of Sports</h2>
                     <p>Your gateway to sport and learning about Argentina.</p>
@@ -44,7 +50,6 @@
                 </div>
             </section>
     
-            <!-- Event Card -->
             <div class="card-grid">
                 <div class="card event-card">
                     <h2>Last Awards:</h2>
