--- a/individual-sports.html
+++ b/individual-sports.html
@@ -44,38 +44,38 @@
         <div class="card-grid-sport">
 
             <div class="sport">
-                <img src="" alt="Tennis" loading="lazy">
+                <img src="images/tennis.webp" alt="Tennis" loading="lazy">
                 <h2>Tennis</h2>
                 <p>Tennis is hugely popular in Argentina, with a long history of success on the international stage. The country has produced several top-ranked players, including Guillermo Vilas, Juan Martín del Potro, and Gabriela Sabatini.</p>
-                <a href="" target="_blank" class="video-link">Watch Highlights</a>
+                <a href="https://www.youtube.com/watch?v=tdi5B8jeyLg&ab_channel=InternationalTennisFederation" target="_blank" class="video-link">Watch Highlights</a>
             </div>
 
             <div class="sport">
-                <img src="" alt="Polo" loading="lazy">
+                <img src="images/polo.webp" alt="Polo" loading="lazy">
                 <h2>Polo</h2>
                 <p>Polo is often considered Argentina’s national sport. The country is a dominant force in the sport globally, with Argentine players consistently ranking among the best in the world. Argentina has produced legendary polo figures such as Adolfo Cambiaso, regarded as one of the greatest polo players of all time.</p>
-                <a href="" target="_blank" class="video-link">Watch Highlights</a>
+                <a href="https://www.youtube.com/watch?v=Sd5QjCAHvsM&ab_channel=FederationofInternationalPolo" target="_blank" class="video-link">Watch Highlights</a>
             </div>
 
             <div class="sport">
-                <img src="" alt="Golf" loading="lazy">
+                <img src="images/golf.webp" alt="Golf" loading="lazy">
                 <h2>Golf</h2>
                 <p>Golf is a sport that Argentina has had significant success in, with Roberto De Vicenzo being one of the country's greatest athletes in the sport. De Vicenzo's achievements, including a historic victory at the Masters Tournament, brought Argentina into the spotlight in the world of golf.></p>
-                <a href="" target="_blank" class="video-link">Watch Highlights</a>
+                <a href="https://www.youtube.com/watch?v=SiEGexG598k&ab_channel=PGATOURLatinoam%C3%A9rica" target="_blank" class="video-link">Watch Highlights</a>
             </div>
 
             <div class="sport">
-                <img src="" alt="Boxing" loading="lazy">
+                <img src="images/boxing.webp" alt="Boxing" loading="lazy">
                 <h2>Boxing</h2>
                 <p>Argentina has a rich boxing tradition, with several world champions in different weight classes. Legendary figures like Carlos Monzón and Marcos Maidana are among the most famous Argentine boxers.</p>
-                <a href="" target="_blank" class="video-link">Watch Highlights</a>
+                <a href="https://www.youtube.com/watch?v=PkVs55bLRiw&ab_channel=DAZNBoxing" target="_blank" class="video-link">Watch Highlights</a>
             </div>
 
             <div class="sport">
-                <img src="" alt="Motorsport" loading="lazy">
+                <img src="images/formula1.webp" alt="Motorsport" loading="lazy">
                 <h2>Motorsport</h2>
                 <p>Argentina has a strong motorsport culture, with significant achievements in rally racing and Formula 1. Juan Manuel Fangio is considered one of the greatest drivers in the history of Formula 1, having won five world championships. </p>
-                <a href="" target="_blank" class="video-link">Watch Highlights</a>
+                <a href="https://www.youtube.com/watch?v=Qa0nj2CcaSM&ab_channel=FORMULA1" target="_blank" class="video-link">Watch Highlights</a>
             </div>
 
             <div class="sport contact-info">
