--- a/individual-sports.html
+++ b/individual-sports.html
@@ -53,14 +53,14 @@
             <div class="sport">
                 <img src="images/polo.webp" alt="Polo" loading="lazy">
                 <h2>Polo</h2>
-                <p>Polo is often considered Argentina’s national sport. The country is a dominant force in the sport globally, with Argentine players consistently ranking among the best in the world. Argentina has produced legendary polo figures such as Adolfo Cambiaso, regarded as one of the greatest polo players of all time.</p>
+                <p>Polo is often considered Argentina’s national sport. The country is a dominant force in the sport globally, with Argentine players consistently ranking among the best in the world. Argentina has produced legendary polo figures such as Adolfo Cambiaso.</p>
                 <a href="https://www.youtube.com/watch?v=Sd5QjCAHvsM&ab_channel=FederationofInternationalPolo" target="_blank" class="video-link">Watch Highlights</a>
             </div>
 
             <div class="sport">
                 <img src="images/golf.webp" alt="Golf" loading="lazy">
                 <h2>Golf</h2>
-                <p>Golf is a sport that Argentina has had significant success in, with Roberto De Vicenzo being one of the country's greatest athletes in the sport. De Vicenzo's achievements, including a historic victory at the Masters Tournament, brought Argentina into the spotlight in the world of golf.></p>
+                <p>Golf is a sport that Argentina has had significant success in, with Roberto De Vicenzo being one of the country's greatest athletes in the sport. De Vicenzo's achievements, including a historic victory at the Masters Tournament.</p>
                 <a href="https://www.youtube.com/watch?v=SiEGexG598k&ab_channel=PGATOURLatinoam%C3%A9rica" target="_blank" class="video-link">Watch Highlights</a>
             </div>
 
