--- a/team-sports.html
+++ b/team-sports.html
@@ -32,11 +32,12 @@
 <body>
     <header>
         <h1>Team Sports - Chamber of Sports</h1>
+        
         <nav class="nav-links" id="nav-links" role="navigation">
             <a href="https://lucioboccazzi.github.io/wdd231/project.html" title="Go to Home Page">Home</a>
             <a href="https://lucioboccazzi.github.io/wdd231/team-sports.html" title="Learn about Team Sports">Team Sports</a>
             <a href="https://lucioboccazzi.github.io/wdd231/individual-spots.html" title="Learn about Individual Sports">Individual Sports</a>
-            <a href="#" title="Join the Sports Community">Join</a>
+            <a href="https://lucioboccazzi.github.io/wdd231/join-spots.html" title="Join the Sports Community">Join</a>
         </nav>
     </header>
 
