--- a/project.html
+++ b/project.html
@@ -35,7 +35,7 @@
             <a href="https://lucioboccazzi.github.io/wdd231/project.html" title="Go to Home Page">Home</a>
             <a href="https://lucioboccazzi.github.io/wdd231/team-sports.html" title="Learn about Team Sports">Team Sports</a>
             <a href="https://lucioboccazzi.github.io/wdd231/individual-spots.html" title="Learn about Individual Sports">Individual Sports</a>
-            <a href="https://lucioboccazzi.github.io/wdd231/join-spots.html" title="Join the Sports Community">Join</a>
+            <a href="https://lucioboccazzi.github.io/wdd231/join-sports.html" title="Join the Sports Community">Join</a>
         </nav>
     </header>
 
