--- a/join-sports.html
+++ b/join-sports.html
@@ -63,7 +63,7 @@
                 <label for="selected-individual-sport">Individual Sports:</label>
                 <select name="selected-individual-sport" id="selected-individual-sport">
                     <option value="none">None</option>
-                    <option value="np">Tennis</option>
+                    <option value="tennis">Tennis</option>
                     <option value="polo">Polo</option>
                     <option value="golf">Golf</option>
                     <option value="boxing">Boxing</option>
