--- a/thankyou.html
+++ b/thankyou.html
@@ -16,7 +16,7 @@
         <meta property="og:url" content="" />
         <meta name="twitter:url" content="" />
         
-        <link rel="stylesheet" href="styles/project.css"/>
+        <link rel="stylesheet" href="styles/thankyou.css"/>
         <link rel="stylesheet" href="styles/join.css"/>
         
         <script src="scripts/final-project-general.js" defer></script>
